Small fix on logo alignment

--- a/HallOfFame.css
+++ b/HallOfFame.css
@@ -21,11 +21,12 @@ body {
 	background-color: black;
 }
 
-img {
-	display: block;
-    margin-left: auto;
-    margin-right: auto;
+#logo {
+	text-align: center;
 	margin-bottom: 20px;
+}
+
+#logo img {
 	width: 300px;
 }
 
